--- a/guide/.vuepress/styles/theme-variables.scss
+++ b/guide/.vuepress/styles/theme-variables.scss
@@ -1,13 +1,13 @@
 // base colors
 :root {
 	// NateBot Colors
-	--natebot-430: #707bf4;
-	--natebot-460: #6571f3;
-	--natebot-500: #5865f2;
-	--natebot-530: #505cdc;
-	--natebot-560: #4752c4;
-	--natebot-600: #3c45a5;
-	--natebot-630: #343b8f;
+	--natebot-430: #6f83c2;
+	--natebot-460: #5d73bb;
+	--natebot-500: #445AA1;
+	--natebot-530: #3c508f;
+	--natebot-560: #35467d;
+	--natebot-600: #2d3c6b;
+	--natebot-630: #263259;
 
 	// Guide green colors
 	--green-430: #5bc595;
