--- a/guide/.vuepress/styles/navbar.scss
+++ b/guide/.vuepress/styles/navbar.scss
@@ -93,9 +93,17 @@ html.guide-theme-blurple {
 		}
 	}
 
-	a {
-		@include navLink();
+	.navicon-fade {
+		transition: opacity 0.3s;
+		-webkit-transition: opacity 0.3s;
+		opacity: 1;
+	}
+	
+	.navicon-fade:hover {
+		opacity: 0.5;
+	}
 
+	a {	
 		.icon.outbound {
 			color: var(--text-gray);
 		}
